# py-bookstore

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/: conftest.py  test_models.py  test_serializers.py  test_viewsets.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/: conftest.py  test_models.py  test_serializers.py  test_viewsets.py
product/viewsets/: category_viewset.py  product_viewset.py
